judge/ba8484aaa7d64a7089b921e4fb1b20bc/e95c268745ca0d0ddf5c5c6f2ecbc1c3/2016-07-25-01:30:24compile.log
/edx/xblock-simplejudge/judge/ba8484aaa7d64a7089b921e4fb1b20bc/e95c268745ca0d0ddf5c5c6f2ecbc1c3/Main.java:4: error: '(' or '[' expected
		Scanner sc = new Sca nner(System.in);
		                     ^
/edx/xblock-simplejudge/judge/ba8484aaa7d64a7089b921e4fb1b20bc/e95c268745ca0d0ddf5c5c6f2ecbc1c3/Main.java:4: error: not a statement
		Scanner sc = new Sca nner(System.in);
		                         ^
2 errors
